// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Login Logo is hidden when keyboard is visible 1`] = `
<View
  style={
    Array [
      Object {
        "alignItems": "center",
        "flex": 1,
        "justifyContent": "space-around",
      },
    ]
  }
>
  <View
    keyboardVerticalOffset={64}
    onLayout={[Function]}
    style={
      Array [
        undefined,
        Object {
          "paddingBottom": 0,
        },
      ]
    }
  >
    <View
      style={
        Object {
          "alignSelf": "center",
          "justifyContent": "center",
          "width": 525,
        }
      }
    >
      <View>
        <TextInput
          allowFontScaling={true}
          autoCapitalize="none"
          autoCorrect={false}
          autoFocus={false}
          id="usernameTextInput"
          onChangeText={[Function]}
          placeholder="Username"
          style={
            Object {
              "marginBottom": 12,
            }
          }
          underlineColorAndroid="transparent"
          value=""
        />
        <TextInput
          allowFontScaling={true}
          autoCapitalize="none"
          autoCorrect={false}
          id="passwordTextInput"
          onChangeText={[Function]}
          placeholder="Password"
          secureTextEntry={true}
          style={
            Object {
              "marginBottom": 16,
            }
          }
          underlineColorAndroid="transparent"
          value=""
        />
      </View>
      <View
        accessibilityComponentType={undefined}
        accessibilityLabel={undefined}
        accessibilityTraits={undefined}
        accessible={true}
        hasTVPreferredFocus={undefined}
        hitSlop={undefined}
        isTVSelectable={true}
        nativeID={undefined}
        onLayout={undefined}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          Object {
            "alignItems": "center",
            "backgroundColor": "#4d4dff",
            "borderRadius": 30,
            "elevation": 1,
            "paddingBottom": 8,
            "paddingTop": 8,
          }
        }
        testID={undefined}
        tvParallaxProperties={undefined}
      >
        <Text
          accessible={true}
          allowFontScaling={true}
          ellipsizeMode="tail"
          style={
            Object {
              "color": "white",
              "fontFamily": null,
              "fontSize": 16,
              "fontWeight": "bold",
            }
          }
        >
          Login
        </Text>
      </View>
      <View>
        <View
          style={
            Object {
              "flexDirection": "row",
              "justifyContent": "center",
              "marginTop": 40,
            }
          }
        >
          <Text
            accessible={true}
            allowFontScaling={true}
            ellipsizeMode="tail"
            id="altPageTitle"
            onPress={[Function]}
            style={
              Object {
                "color": "blue",
                "fontSize": 16,
              }
            }
          >
            Sign up
          </Text>
        </View>
        <Text
          accessible={true}
          allowFontScaling={true}
          ellipsizeMode="tail"
          id="helperText"
          style={
            Object {
              "fontFamily": null,
              "fontSize": 12,
              "marginTop": 10,
              "textAlign": "center",
            }
          }
        >
          New user? Press 'Sign up' to register.
        </Text>
      </View>
    </View>
  </View>
</View>
`;

exports[`Login renders sign up details when state is sign up 1`] = `
<View
  style={
    Array [
      Object {
        "alignItems": "center",
        "flex": 1,
        "justifyContent": "space-around",
      },
    ]
  }
>
  <View
    keyboardVerticalOffset={64}
    onLayout={[Function]}
    style={
      Array [
        undefined,
        Object {
          "paddingBottom": 0,
        },
      ]
    }
  >
    <View
      style={
        Object {
          "alignSelf": "stretch",
          "justifyContent": "center",
          "padding": 0,
        }
      }
    >
      <Text
        accessible={true}
        allowFontScaling={true}
        ellipsizeMode="tail"
        style={
          Object {
            "fontFamily": null,
            "fontSize": 24,
            "marginTop": 50,
            "textAlign": "center",
          }
        }
      >
        Hi! Welcome to
      </Text>
      <Image
        resizeMode="contain"
        source={
          Object {
            "testUri": "../../../src/static/images/logo.png",
          }
        }
        style={
          Object {
            "height": 213.44,
            "marginBottom": 213.44,
            "width": 600,
          }
        }
      />
    </View>
    <View
      style={
        Object {
          "alignSelf": "center",
          "justifyContent": "center",
          "width": 525,
        }
      }
    >
      <View>
        <TextInput
          allowFontScaling={true}
          autoCapitalize="none"
          autoCorrect={false}
          autoFocus={false}
          id="emailTextInput"
          keyboardType="email-address"
          onChangeText={[Function]}
          placeholder="Email address"
          style={
            Object {
              "marginBottom": 12,
            }
          }
          underlineColorAndroid="transparent"
          value=""
        />
      </View>
      <View>
        <TextInput
          allowFontScaling={true}
          autoCapitalize="none"
          autoCorrect={false}
          autoFocus={false}
          id="usernameTextInput"
          onChangeText={[Function]}
          placeholder="Username"
          style={
            Object {
              "marginBottom": 12,
            }
          }
          underlineColorAndroid="transparent"
          value=""
        />
        <TextInput
          allowFontScaling={true}
          autoCapitalize="none"
          autoCorrect={false}
          id="passwordTextInput"
          onChangeText={[Function]}
          placeholder="Password"
          secureTextEntry={true}
          style={
            Object {
              "marginBottom": 16,
            }
          }
          underlineColorAndroid="transparent"
          value=""
        />
      </View>
      <View
        accessibilityComponentType={undefined}
        accessibilityLabel={undefined}
        accessibilityTraits={undefined}
        accessible={true}
        hasTVPreferredFocus={undefined}
        hitSlop={undefined}
        isTVSelectable={true}
        nativeID={undefined}
        onLayout={undefined}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          Object {
            "alignItems": "center",
            "backgroundColor": "#4d4dff",
            "borderRadius": 30,
            "elevation": 1,
            "paddingBottom": 8,
            "paddingTop": 8,
          }
        }
        testID={undefined}
        tvParallaxProperties={undefined}
      >
        <Text
          accessible={true}
          allowFontScaling={true}
          ellipsizeMode="tail"
          style={
            Object {
              "color": "white",
              "fontFamily": null,
              "fontSize": 16,
              "fontWeight": "bold",
            }
          }
        >
          Sign up
        </Text>
      </View>
      <View>
        <View
          style={
            Object {
              "flexDirection": "row",
              "justifyContent": "center",
              "marginTop": 40,
            }
          }
        >
          <Text
            accessible={true}
            allowFontScaling={true}
            ellipsizeMode="tail"
            id="altPageTitle"
            onPress={[Function]}
            style={
              Object {
                "color": "blue",
                "fontSize": 16,
              }
            }
          >
            Login
          </Text>
        </View>
        <Text
          accessible={true}
          allowFontScaling={true}
          ellipsizeMode="tail"
          id="helperText"
          style={
            Object {
              "fontFamily": null,
              "fontSize": 12,
              "marginTop": 10,
              "textAlign": "center",
            }
          }
        >
          Existing user? Press 'Login'.
        </Text>
      </View>
    </View>
  </View>
</View>
`;
